Fixed list overlaping on map issue

--- a/ReviewApp/src/pages/review-list-page/review-list-page.scss
+++ b/ReviewApp/src/pages/review-list-page/review-list-page.scss
@@ -1,5 +1,4 @@
-page-list {
-
+page-review-list-page {
 .ios, .md {
  
   home-page {
