--- a/ReviewApp/src/theme/variables.scss
+++ b/ReviewApp/src/theme/variables.scss
@@ -12,7 +12,7 @@ $font-path: "../assets/fonts";
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
-$background-color:  #6495ED;
+$background-color:  #EAFCFF;
 
 
 // Named Color Variables
